# fzfui

./: ARCHITECTURE.md  README.md  cmdi  cmdi-toggle  cmdz  cmdz-on-change  main.py  psi  psi-cmd  psi-detail  psi-help  psi.conf  pyproject.toml  snitch.conf  snitchi  snitchi-help  snitchi-on-change  snitchi-toggle  sockets-query  sockets.conf  socketsi  z.json
examples/: jqi  psi
src/fzfui/: __init__.py  app.py
src/fzfui/tools/: jqi.py  psi.py  vui.py
tests/: __init__.py  conftest.py  fake_llm  test-interactive  test_clipboard.py  test_jqi.py  test_psi.py  test_snitchi.py  test_vui.py
