[build-system]
requires = ["uv_build>=0.5.15"]
build-backend = "uv_build"

[project]
name = "fzfui"
version = "0.1.0"
description = "A library for creating interactive fzf UIs for arbitrary shell commands"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Dan Davison", email = "dandavison7@gmail.com" }]
dependencies = ["typer>=0.9.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
